# automotive-can-validation-lab

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  project_learning_map.md
docs/learning_notes/01_can_fundamentals/: 01_CAN_Fundamentals.md
requirements/: CAN_FUNDAMENTALS_REQUIREMENTS.md
src/automotive_can_validation/: can_identifier.py
tests/: test_can_identifier.py
